--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -170,3 +170,9 @@ a {
  
   text-decoration: unset;
 }
+.sticky-mobile-footer {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  z-index: 100000;
+}
